# xlr8

./: .pre-commit-config.yaml  README.md  constants.py  pyproject.toml
.github/workflows/: pr-checks.yml  release.yml
rust/xlr8_rust/: Cargo.toml  pyproject.toml
rust/xlr8_rust/src/full_fetch/: mod.rs  parquet_writer.rs
src/xlr8/: rust_backend.py
src/xlr8/analysis/: brackets.py  chunker.py  inspector.py
src/xlr8/collection/: __init__.py  cursor.py
src/xlr8/execution/: __init__.py  callback.py  executor.py  planner.py
src/xlr8/schema/: __init__.py  encoder.py  types.py
src/xlr8/storage/: __init__.py  cache.py  reader.py
stubs/pymongo/synchronous/: collection.pyi  cursor.pyi
tests/analysis/: test_brackets.py  test_inspector.py
tests/execution/: test_executor.py  test_planner.py
tests/integration/: test_autocomplete.py  test_pymongo_compatibility.py
tests/schema/: test_encoder_python.py  test_schema.py  test_types.py
tests/storage/: test_reader.py
