[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlr8"
version = "0.1.0"
description = "High-performance database read acceleration layer for MongoDB. Auto-chunks and parallelizes queries across multiple-workers, streams results to parquet with intelligent caching and memory-bounded execution, option to stream data directly to any data lake. Same PyMongo API but dramatically faster results with RUST backend for CPU-heavy tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow==11.0.0",
    "pymongo==3.12.0", #TODO: change this to >= when ready to publish
    "pandas==1.5.0", #TODO: change this to >= when ready to publish
]

[tool.hatch.build.targets.wheel]
packages = ["src/xlr8"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
