[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlr8"
version = "0.1.0"
description = "High-performance database read acceleration layer for MongoDB. Auto-chunks and parallelizes queries across multiple-workers, streams results to parquet with intelligent caching and memory-bounded execution, option to stream data directly to any data lake. Same PyMongo API but dramatically faster results with RUST backend for CPU-heavy tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow==10.0.1",  #TODO: change this to >= when ready to publish
    "pymongo==3.12.0", #TODO: change this to >= when ready to publish
    "pandas==1.5.0", #TODO: change this to >= when ready to publish
    "polars==0.15.1", #TODO: change this to >= when ready to publish
    "duckdb==0.6.0", #TODO: change this to >= when ready to publish
    "orjson==3.8.1", #TODO: change this to >= when ready to publish
    "xlr8-rust"
]

[tool.hatch.build.targets.wheel]
packages = ["src/xlr8"]


[tool.uv.sources]
xlr8-rust = { path = "rust/xlr8_rust" }

[tool.setuptools.package-data]
xlr8 = ["py.typed", "**/*.pyi"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["F841"]  # Allow unused variables in tests

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportShadowedImports = false
reportUnusedVariable = false
reportGeneralTypeIssues = "warning"  # Downgrade type issues to warnings
